# library_prosoponym_python

./: CHANGELOG.md  README.md  pyproject.toml
src/thelittlehackers/prosoponym/: __init__.py  constants.py  exceptions.py
