[tool.poetry]
authors = ["Daniel CAUNE <daniel.caune@thelittlehackers.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
]
description = "Python library for formatting personal names, also known as prosoponyms in onomastics"
keywords = ["name", "library", "prosoponym"]
license = "MIT License"
name = "thelittlehackers-prosoponym"
packages = [{include = "thelittlehackers", from = "src"}]
readme = "README.md"
repository = "https://github.com/the-little-hackers/library_prosoponym_python"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.12"
unidecode = "^1.3.8"
thelittlehackers-core = {git = "https://github.com/the-little-hackers/library_thelittlehackers-core_python.git"}

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
